# mirex2025

./: pyproject.toml  requirements.txt  tokenize.py  tokenizer.py
rwkv/: collator.py  requirements.txt  train.py  train.sh
rwkv/src/: mirex_dataset.py  model.py  trainer.py
sym-music-gen/: README.md  generation.sh  pyproject.toml  requirements.txt
sym-music-gen/configs/: train_config.json
sym-music-gen/data/: test2.mid
sym-music-gen/data/prompts/: fly_me_prompt.json
sym-music-gen/src/: experiment.py  filter_and_split_aria_dataset.py  find_longest_16_bar_window.py  generate.py  midi_to_prompt.py  mirex_dataset.py  preprocess_dataset.py  preprocess_dataset_2.py  tokenizer.py  train.py
